restructure LESS files

--- a/hbs/index.hbs
+++ b/hbs/index.hbs
@@ -39,7 +39,7 @@
     <p>See the <a href=https://github.com/digitallinguistics/styles#readme>GitHub repository</a> for instructions on how to use DLx styles in your code.</p>
 
     <nav>
-      <h2 class=header-section>Contents</h2>
+      <h2 class=h-section>Contents</h2>
       <ul class=bulleted>
         <li><a class=link href=#variables>Variables</a></li>
         <li><a class=link href=#typography>Typography</a></li>
