--- a/hbs/partials/patterns.hbs
+++ b/hbs/partials/patterns.hbs
@@ -1,6 +1,6 @@
 <section id=patterns>
 
-  <h1 class=header-section>Patterns</h1>
+  <h1 class=h-section>Patterns</h1>
 
   {{#each patterns}}
     <section id={{@key}}-pattern class='pattern {{@key}}-example'>
@@ -11,13 +11,13 @@
       </header>
 
       <div>
-        <h1 class=header-minor>Example Markup</h1>
+        <h1 class=h-minor>Example Markup</h1>
         <pre><code class=markup>
 {{html}}</code></pre>
       </div>
 
       <div>
-        <h1 class=header-minor>Live Example</h1>
+        <h1 class=h-minor>Live Example</h1>
         <div class=rendered>{{{html}}}</div>
       </div>
 
