--- a/hbs/partials/typography.hbs
+++ b/hbs/partials/typography.hbs
@@ -1,6 +1,6 @@
 <section id=typography>
 
-  <h1 class=header-section>Typography</h1>
+  <h1 class=h-section>Typography</h1>
 
   <p class=hanging-indent><strong>Fira Sans Light</strong> (<em>not</em> Fira Sans Regular) is the default font used throughout DLx tools, with a line height of 1.5.</p>
   <p class=hanging-indent style="font-style: italic;"><strong>Fira Sans Light Italic</strong> is used for italics.</p>
