--- a/less/dlx.less
+++ b/less/dlx.less
@@ -4,7 +4,8 @@ This file bundles together all the DLx stylesheets into a single LESS/CSS file. 
 
 @path:  'https://cdn.digitallinguistics.io/less';
 
+@import '@{path}/variables.less';
+@import '@{path}/reset.less';
 @import '@{path}/fonts.less';
 @import '@{path}/colors.less';
 @import '@{path}/classes.less';
-@import '@{path}/global.less';
