--- a/less/patterns.less
+++ b/less/patterns.less
@@ -1,7 +1,7 @@
-@import '../less/fonts.less';
-@import '../less/colors.less';
-@import '../less/classes.less';
-@import '../less/global.less';
+@import 'less/fonts.less';
+@import 'less/colors.less';
+@import 'less/classes.less';
+@import 'less/global.less';
 
 body {
 
