--- a/less/patterns.less
+++ b/less/patterns.less
@@ -1,11 +1,9 @@
-@import 'less/fonts.less';
-@import 'less/colors.less';
-@import 'less/classes.less';
 @import 'less/global.less';
 
 body {
 
   align-items: center;
+  line-height: 1.5;
   padding: 2rem;
 
   > label {
@@ -128,11 +126,11 @@ body {
   width: 80%;
 }
 
-.main-nav-example .rendered {
+.nav-example .rendered {
   align-items: stretch;
 }
 
-.white-link-example .rendered p {
+.link-white-example .rendered p {
   background-color: @blue;
   padding: 0.5em;
 }
