--- a/less/global.less
+++ b/less/global.less
@@ -12,7 +12,8 @@ This file contains DLx styles that are applied by default, without the need for 
 // elements whose contents are typically inline
 blockquote, button, caption, dd, dt, figcaption, h1, h2, h3, h4, h5, h6, input, legend, option, output, p, pre, select, summary, textarea,
 // inline elements
-abbr, acronym, b, bdo, big, br, cite, code, del, dfn, em, i, ins, kbd, mark, q, samp, s, small, span, strike, strong, sub, sup, time, tt, var, {
+abbr, acronym, b, bdo, big, br, cite, code, del, dfn, em, i, ins, kbd, mark, q, samp, s, small, span, strike, strong, sub, sup, time, tt, var,
+{
   > a {
     .link;
   }
