--- a/less/classes.less
+++ b/less/classes.less
@@ -193,7 +193,7 @@ This file contains DLx styles that need to be explicitly specified using classes
   font-size: 0.75em;
   font-style: normal;
   overflow-x: auto;
-  padding: 0.25em;
+  padding: 0.25em 0.5em;
   white-space: pre;
 }
 
@@ -409,11 +409,15 @@ This file contains DLx styles that need to be explicitly specified using classes
 
     counter-increment: numbered;
     display: list-item;
+    position: relative;
+
+    > * { margin-left: 2.5rem; }
 
     &::before {
       content: counter(numbered) '.';
       font-weight: bold;
-      padding: 0.5em;
+      padding: 0rem 0.5em;
+      position: absolute;
     }
 
   }
@@ -460,6 +464,13 @@ This file contains DLx styles that need to be explicitly specified using classes
 .strong {
   color: @verydarkblue;
   font-weight: bold;
+}
+
+.summary {
+  align-items: center;
+  display: flex; // TODO: remove this when flexbox-reset is updated
+  flex-direction: row;
+  margin-left: -1em;
 }
 
 .textarea {
