--- a/examples/button.hbs
+++ b/examples/button.hbs
@@ -1,5 +1,5 @@
 <button class=button type=button>Button</button>
 <button class=button type=button disabled>Disabled Button</button>
-<button class=button type=button class=red-background>Red Button</button>
+<button class=button-red type=button class=red-background>Red Button</button>
 
-<input class=button type=button value='input[type=button]'>
+<input class=button type=button value='Input Button'>
