--- a/less/patterns.less
+++ b/less/patterns.less
@@ -63,6 +63,10 @@ body {
     width: 1rem;
   }
 
+  img[src="img/x-circle.svg"] {
+    height: 1.5rem;
+  }
+
 }
 
 .markup,
@@ -79,7 +83,7 @@ body {
 }
 
 .page-title {
-  text-align: center;
+  align-self: center;
 }
 
 .pattern > div {
