--- a/less/classes.less
+++ b/less/classes.less
@@ -437,9 +437,9 @@ This file contains DLx styles that need to be explicitly specified using classes
     &::before {
       content: counter(numbered) '.';
       font-weight: bold;
+      margin-left: -2.5rem;
       padding: 0rem 0.5em;
       position: absolute;
-      right: 5rem;
     }
 
   }
