--- a/css/dlx.css
+++ b/css/dlx.css
@@ -221,54 +221,59 @@ thead {
 tr {
   display: table-row;
 }
-/*
-This file declares @font-face rules for each of the fonts used in DLx projects
- */
 @font-face {
   font-family: 'Fira Sans';
-  src: local('Fira Sans'), url('https://cdn.digitallinguistics.io/fonts/FiraSans-Light.woff2') format('woff2'), url('https://cdn.digitallinguistics.io/fonts/FiraSans-Light.woff') format('woff'), url('https://cdn.digitallinguistics.io/fonts/FiraSans-Light.ttf') format('truetype');
+  src: local('Fira Sans Light'), url('../fonts/FiraSans-Light.woff2') format('woff2'), url('../fonts/FiraSans-Light.woff') format('woff');
+  font-display: fallback;
   font-style: normal;
   font-weight: normal;
 }
 @font-face {
   font-family: 'Fira Sans';
-  src: local('Fira Sans Light Italic'), url('https://cdn.digitallinguistics.io/fonts/FiraSans-LightItalic.woff2') format('woff2'), url('https://cdn.digitallinguistics.io/fonts/FiraSans-LightItalic.woff') format('woff'), url('https://cdn.digitallinguistics.io/fonts/FiraSans-LightItalic.ttf') format('truetype');
+  src: local('Fira Sans Light Italic'), url('../fonts/FiraSans-LightItalic.woff2') format('woff2'), url('../fonts/FiraSans-LightItalic.woff') format('woff');
+  font-display: fallback;
   font-style: italic;
   font-weight: normal;
 }
 @font-face {
   font-family: 'Fira Sans';
-  src: local('Fira Sans Medium'), url('https://cdn.digitallinguistics.io/fonts/FiraSans-Medium.woff2') format('woff2'), url('https://cdn.digitallinguistics.io/fonts/FiraSans-Medium.woff') format('woff'), url('https://cdn.digitallinguistics.io/fonts/FiraSans-Medium.ttf') format('truetype');
+  src: local('Fira Sans Medium'), url('../fonts/FiraSans-Medium.woff2') format('woff2'), url('../fonts/FiraSans-Medium.woff') format('woff');
+  font-display: fallback;
   font-style: normal;
   font-weight: bold;
 }
 @font-face {
   font-family: 'Fira Sans';
-  src: local('Fira Sans Medium Italic'), url('https://cdn.digitallinguistics.io/fonts/FiraSans-MediumItalic.woff2') format('woff2'), url('https://cdn.digitallinguistics.io/fonts/FiraSans-MediumItalic.woff') format('woff'), url('https://cdn.digitallinguistics.io/fonts/FiraSans-MediumItalic.ttf') format('truetype');
+  src: local('Fira Sans Medium Italic'), url('../fonts/FiraSans-MediumItalic.woff2') format('woff2'), url('../fonts/FiraSans-MediumItalic.woff') format('woff');
+  font-display: fallback;
   font-style: italic;
   font-weight: bold;
 }
 @font-face {
   font-family: 'Fira Mono';
-  src: local('Fira Mono Regular'), url('https://cdn.digitallinguistics.io/fonts/FiraMono-Regular.woff2') format('woff2'), url('https://cdn.digitallinguistics.io/fonts/FiraMono-Regular.woff') format('woff'), url('https://cdn.digitallinguistics.io/fonts/FiraMono-Regular.ttf') format('truetype');
+  src: local('Fira Mono Regular'), url('../fonts/FiraMono-Regular.woff2') format('woff2'), url('../fonts/FiraMono-Regular.woff') format('woff');
+  font-display: fallback;
   font-style: normal;
   font-weight: normal;
 }
 @font-face {
   font-family: 'Fira Mono';
-  src: local('Fira Mono Bold'), url('https://cdn.digitallinguistics.io/fonts/FiraMono-Bold.woff2') format('woff2'), url('https://cdn.digitallinguistics.io/fonts/FiraMono-Bold.woff') format('woff'), url('https://cdn.digitallinguistics.io/fonts/FiraMono-Bold.ttf') format('truetype');
+  src: local('Fira Mono Bold'), url('../fonts/FiraMono-Bold.woff2') format('woff2'), url('../fonts/FiraMono-Bold.woff') format('woff');
+  font-display: fallback;
   font-style: normal;
   font-weight: bold;
 }
 @font-face {
   font-family: 'Gentium Plus';
-  src: local('Gentium Plus Regular'), url('https://cdn.digitallinguistics.io/fonts/GentiumPlus-R.woff2') format('woff2'), url('https://cdn.digitallinguistics.io/fonts/GentiumPlus-R.woff') format('woff'), url('https://cdn.digitallinguistics.io/fonts/GentiumPlus-R.ttf') format('truetype');
+  src: local('Gentium Plus Regular'), url('../fonts/GentiumPlus-R.woff2') format('woff2'), url('../fonts/GentiumPlus-R.woff') format('woff');
+  font-display: swap;
   font-style: normal;
   font-weight: normal;
 }
 @font-face {
   font-family: 'Gentium Plus';
-  src: local('Gentium Plus Italic'), url('https://cdn.digitallinguistics.io/fonts/GentiumPlus-I.woff2') format('woff2'), url('https://cdn.digitallinguistics.io/fonts/GentiumPlus-I.woff') format('woff'), url('https://cdn.digitallinguistics.io/fonts/GentiumPlus-I.ttf') format('truetype');
+  src: local('Gentium Plus Italic'), url('../fonts/GentiumPlus-I.woff2') format('woff2'), url('../fonts/GentiumPlus-I.woff') format('woff');
+  font-display: swap;
   font-style: italic;
   font-weight: normal;
 }
@@ -1418,9 +1423,9 @@ This file contains DLx styles that need to be explicitly specified using classes
 .numbered li::before {
   content: counter(numbered) '.';
   font-weight: bold;
+  margin-left: -2.5rem;
   padding: 0rem 0.5em;
   position: absolute;
-  right: 5rem;
 }
 .orthographic {
   font-family: 'Gentium Plus', 'Charis SIL', 'Doulos SIL', 'Cambria', 'Andika', 'Lucida Sans Unicode', 'Times New Roman', 'Georgia', serif;
@@ -1511,7 +1516,7 @@ This file contains DLx styles that need to be explicitly specified using classes
 }
 .select {
   border: 1px solid black;
-  border-radius: 5px;
+  border-radius: 0.25em;
   padding: 0.25em;
 }
 .strong {
