--- a/less/classes.less
+++ b/less/classes.less
@@ -516,7 +516,7 @@ This file contains DLx styles that need to be explicitly specified using classes
 
 .select {
   border: 1px solid black;
-  border-radius: 5px;
+  border-radius: 0.25em;
   padding: 0.25em;
 }
 
