--- a/less/variables.less
+++ b/less/variables.less
@@ -2,4 +2,4 @@
 This file contains LESS variables for use in other LESS files
  */
 
-@cdn: 'https://cdn.digitallinguistics.io/';
+@cdn: 'https://cdn.digitallinguistics.io';
