--- a/css/reset.css
+++ b/css/reset.css
@@ -57,6 +57,7 @@ fieldset,
 form,
 label,
 legend,
+output,
 table,
 textarea,
 tbody,
@@ -148,9 +149,11 @@ output,
 p,
 pre,
 select,
-summary,
 textarea {
   display: block;
+}
+[hidden] {
+  display: none;
 }
 a,
 a:link,
@@ -162,7 +165,7 @@ a:active {
   text-decoration: none;
 }
 body {
-  background: white;
+  background-color: transparent;
   color: black;
   font-stretch: normal;
   font-style: normal;
@@ -181,9 +184,6 @@ blockquote:after,
 q:after {
   content: '';
   content: none;
-}
-:focus {
-  outline: 0;
 }
 input[type=date],
 input[type=datetime-local],
