--- a/less/dlx.less
+++ b/less/dlx.less
@@ -2,9 +2,8 @@
 This file bundles together all the DLx stylesheets into a single LESS/CSS file. NB: The import order is important.
  */
 
-@path:  'https://cdn.digitallinguistics.io/less';
+@path:  'https://digitallinguistics.blob.core.windows.net/less';
 
-@import '@{path}/variables.less';
 @import '@{path}/reset.less';
 @import '@{path}/fonts.less';
 @import '@{path}/colors.less';
