--- a/less/reset.less
+++ b/less/reset.less
@@ -2,4 +2,4 @@
 This file applies a CSS reset which uses flexbox styling as the default for most cases. See [flexbox-reset](https://github.com/dwhieb/flexbox-reset) for more information.
  */
 
-@import 'https://cdn.digitallinguistics.io/less/flexbox-reset.less';
+@import 'https://digitallinguistics.blob.core.windows.net/less/flexbox-reset.less';
