--- a/less/classes.less
+++ b/less/classes.less
@@ -2,140 +2,149 @@
 This file contains DLx styles that need to be explicitly specified using classes
  */
 
-// VARIABLES
-@cdn: 'https://cdn.digitallinguistics.io';
+@import (reference) 'https://digitallinguistics.blob.core.windows.net/less/colors.less';
 
-@import (reference) '@{cdn}/less/colors.less';
+:root {
+  --border: 0.075em solid black;
+  --border-gray: 0.075em solid var(--gray);
+  --border-radius: 0.35em;
+  --shadow: 0.075em 0.075em 0.15em var(--gray);
+  --shadow-button: inset -0.075em -0.075em 0.15em 0em rgba(0,0,0,0.15), ;
+  --shadow-button-press: 0 0 0 0.075em rgba(0,0,0,0.15) inset, 0 0 0.5em rgba(0,0,0,0.2) inset;
+  --shadow-inset: inset 0.075em 0.075em 0.15em var(--gray);
+  --shadow-inset-blue: inset 0.075em 0.075em 0.15em var(--blue);
+  --shadow-inset-red: inset 0.075em 0.075em 0.15em var(--darkred);
+}
 
 // COLOR CLASSES
-.wugblue                    { color:            @wugblue; }
-.wugblue-background         { background-color: @wugblue; }
+.wugblue                    { color:            var(--wugblue); }
+.wugblue-background         { background-color: var(--wugblue); }
 
-.verydarkblue               { color:            @verydarkblue; }
-.darkblue                   { color:            @darkblue; }
-.blue                       { color:            @blue; }
-.lightblue                  { color:            @lightblue; }
-.verylightblue              { color:            @verylightblue; }
+.verydarkblue               { color:            var(--verydarkblue); }
+.darkblue                   { color:            var(--darkblue); }
+.blue                       { color:            var(--blue); }
+.lightblue                  { color:            var(--lightblue); }
+.verylightblue              { color:            var(--verylightblue); }
 
 .verydarkblue-background {
-  background-color: @verydarkblue;
+  background-color: var(--verydarkblue);
   color: white;
   a { .link-white; }
 }
 
 .darkblue-background {
-  background-color: @darkblue;
+  background-color: var(--darkblue);
   color: white;
   a { .link-white; }
 }
 
 .blue-background {
-  background-color: @blue;
+  background-color: var(--blue);
   color: white;
   a { .link-white; }
 }
 
-.lightblue-background       { background-color: @lightblue; }
-.verylightblue-background   { background-color: @verylightblue; }
+.lightblue-background       { background-color: var(--lightblue); }
+.verylightblue-background   { background-color: var(--verylightblue); }
 
-.gray                       { color:            @gray; }
-.gray-background            { background-color: @gray; }
+.gray                       { color:            var(--gray); }
+.gray-background            { background-color: var(--gray); }
 
-.verylightgreen             { color:            @verylightgreen; }
-.lightgreen                 { color:            @lightgreen; }
-.green                      { color:            @green; }
-.darkgreen                  { color:            @darkgreen; }
-.verydarkgreen              { color:            @verydarkgreen; }
-.superdarkgreen             { color:            @superdarkgreen; }
+.verylightgreen             { color:            var(--verylightgreen); }
+.lightgreen                 { color:            var(--lightgreen); }
+.green                      { color:            var(--green); }
+.darkgreen                  { color:            var(--darkgreen); }
+.verydarkgreen              { color:            var(--verydarkgreen); }
+.superdarkgreen             { color:            var(--superdarkgreen); }
 
-.verylightgreen-background  { background-color: @verylightgreen; }
-.lightgreen-background      { background-color: @lightgreen; }
-.green-background           { background-color: @green; }
-.darkgreen-background       { background-color: @darkgreen; }
-.verydarkgreen-background   { background-color: @verydarkgreen; }
+.verylightgreen-background  { background-color: var(--verylightgreen); }
+.lightgreen-background      { background-color: var(--lightgreen); }
+.green-background           { background-color: var(--green); }
+.darkgreen-background       { background-color: var(--darkgreen); }
+.verydarkgreen-background   { background-color: var(--verydarkgreen); }
 
 .superdarkgreen-background {
-  background-color: @superdarkgreen;
+  background-color: var(--superdarkgreen);
   color: white;
   a { .link-white; }
 }
 
-.verylightorange            { color:            @verylightorange; }
-.lightorange                { color:            @lightorange; }
-.orange                     { color:            @orange; }
-.darkorange                 { color:            @darkorange; }
+.verylightorange            { color:            var(--verylightorange); }
+.lightorange                { color:            var(--lightorange); }
+.orange                     { color:            var(--orange); }
+.darkorange                 { color:            var(--darkorange); }
 
-.verylightorange-background { background-color: @verylightorange; }
-.lightorange-background     { background-color: @lightorange; }
-.orange-background          { background-color: @orange; }
+.verylightorange-background { background-color: var(--verylightorange); }
+.lightorange-background     { background-color: var(--lightorange); }
+.orange-background          { background-color: var(--orange); }
 
 .darkorange-background {
-  background-color: @darkorange;
+  background-color: var(--darkorange);
   color: white;
   a { .link-white; }
 }
 
-.verylightpurple            { color:            @verylightpurple; }
-.lightpurple                { color:            @lightpurple; }
-.purple                     { color:            @purple; }
-.darkpurple                 { color:            @darkpurple; }
-.verydarkpurple             { color:            @verydarkpurple; }
+.verylightpurple            { color:            var(--verylightpurple); }
+.lightpurple                { color:            var(--lightpurple); }
+.purple                     { color:            var(--purple); }
+.darkpurple                 { color:            var(--darkpurple); }
+.verydarkpurple             { color:            var(--verydarkpurple); }
 
-.verylightpurple-background { background-color: @verylightpurple; }
+.verylightpurple-background { background-color: var(--verylightpurple); }
 
 .lightpurple-background {
-  background-color: @lightpurple;
+  background-color: var(--lightpurple);
   color: white;
   a { .link-white; }
 }
 
 .purple-background {
-  background-color: @purple;
+  background-color: var(--purple);
   color: white;
   a { .link-white; }
 }
 
 .darkpurple-background {
-  background-color: @darkpurple;
+  background-color: var(--darkpurple);
   color: white;
   a { .link-white; }
 }
 
 .verydarkpurple-background {
-  background-color: @verydarkpurple;
+  background-color: var(--verydarkpurple);
   color: white;
   a { .link-white; }
 }
 
-.verylightred               { color:            @verylightred; }
-.lightred                   { color:            @lightred; }
-.red                        { color:            @red; }
-.darkred                    { color:            @darkred; }
-.verydarkred                { color:            @verydarkred; }
+.verylightred               { color:            var(--verylightred); }
+.lightred                   { color:            var(--lightred); }
+.red                        { color:            var(--red); }
+.darkred                    { color:            var(--darkred); }
+.verydarkred                { color:            var(--verydarkred); }
 
-.verylightred-background    { background-color: @verylightred; }
-.lightred-background        { background-color: @lightred; }
+.verylightred-background    { background-color: var(--verylightred); }
+.lightred-background        { background-color: var(--lightred); }
 
 .red-background {
-  background-color: @red;
+  background-color: var(--red);
   color: white;
   a { .link-white; }
 }
 
 .darkred-background {
-  background-color: @darkred;
+  background-color: var(--darkred);
   color: white;
   a { .link-white; }
 }
 
 .verydarkred-background {
-  background-color: @verydarkred;
+  background-color: var(--verydarkred);
   color: white;
   a { .link-white; }
 }
 
-.lightblue-transparent      { background-color: @lightblue-transparent; }
-.verylightblue-transparent  { background-color: @verylightblue-transparent; }
+.lightblue-transparent      { background-color: var(--lightblue-transparent); }
+.verylightblue-transparent  { background-color: var(--verylightblue-transparent); }
 
 // PATTERNS
 .abbr {
@@ -158,14 +167,14 @@ This file contains DLx styles that need to be explicitly specified using classes
   .blue-background;
   align-items: center;
   background-image: linear-gradient(135deg, rgba(255,255,255,0.15), transparent);
-  border-radius: 5px;
-  box-shadow: inset -1px -1px 2px 0px rgba(0,0,0,0.15), 1px 1px 2px #ccc;
+  border-radius: var(--border-radius);
+  box-shadow: var(--shadow-button);
   cursor: pointer;
   padding: 0.25em 0.5em;
   text-align: center;
 
   &:active {
-    box-shadow: 0 0 0 1px rgba(0,0,0,0.15) inset, 0 0 6px rgba(0,0,0,0.2) inset;
+    box-shadow: var(--shadow-button-press);
   }
 
   &:hover, &:focus {
@@ -192,8 +201,8 @@ This file contains DLx styles that need to be explicitly specified using classes
 
 .code {
   background-color: #fafafa;
-  border: 1px solid black;
-  border-radius: 5px;
+  border: var(--border);
+  border-radius: var(--border-radius);
   color: #383a42;
   font-family: 'Fira Mono', 'Consolas', 'Monaco', 'DejaVu Mono', 'Courier New', monospace;
   font-size: 0.75em;
@@ -214,21 +223,20 @@ This file contains DLx styles that need to be explicitly specified using classes
 .field {
 
   background-color: white;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-shadow: inset 0 1px 2px #ddd;
-  cursor: text;
+  border: var(--border-gray);
+  border-radius: var(--border-radius);
+  box-shadow: var(--shadow-inset);
   padding: 0.125em 0.25em;
 
   &:focus {
 
-    border-color: @blue;
-    box-shadow: inset 0px 1px 2px @blue;
+    border-color: var(--blue);
+    box-shadow: var(--shadow-inset-blue);
 
     &:invalid {
-      border-color: @darkred;
-      box-shadow: inset 0px 1px 2px @darkred;
-      color: @red;
+      border-color: var(--darkred);
+      box-shadow: var(--shadow-inset-red);
+      color: var(--red);
     }
 
   }
@@ -354,20 +362,20 @@ This file contains DLx styles that need to be explicitly specified using classes
 
 .kbd {
 
-  background-color: #f7f7f7;
+  background-color: #F7F7F7;
   background-image: linear-gradient(to top, rgba(0,0,0,0.1), rgba(0,0,0,0));
-  border: 1px solid #bbb;
-  border-radius: 6px;
+  border: 0.035em solid #BBB;
+  border-radius: var(--border-radius);
 	color: #444;
-  padding: .25em .5em;
+  padding: 0.25em 0.5em;
 	text-align: center;
-	text-shadow: 0 1px 0 #fff;
+	text-shadow: 0em 0.075em 0em #FFF;
 
-  box-shadow: 0px 2px 0 #bbb,
-    0 3px 1px #999,
-    0 3px 0 #bbb,
-    inset 0 1px 1px #fff,
-    inset 0 -1px 3px #ccc;
+  box-shadow: 0em 0.15em 0em #BBB,
+    0em 0.225em 0.075em #999,
+    0em 0.225em 0em #BBB,
+    inset 0em 0.075em 0.075em #FFF,
+    inset 0em -0.075em 0.225em #CCC;
 
 }
 
@@ -388,9 +396,9 @@ This file contains DLx styles that need to be explicitly specified using classes
   border-bottom: 0.075em solid transparent;
   &:link { .blue; }
   &:visited { .purple; }
-  &:hover { border-bottom: 0.075em solid @blue; }
+  &:hover { border-bottom: 0.075em solid var(--blue); }
   &:active { .blue; }
-  &:visited:hover { border-bottom: 0.075em solid @purple; }
+  &:visited:hover { border-bottom: 0.075em solid var(--purple); }
   &:visited:active { .purple; }
 }
 
@@ -515,13 +523,13 @@ This file contains DLx styles that need to be explicitly specified using classes
 }
 
 .select {
-  border: 1px solid black;
+  border: var(--border);
   border-radius: 0.25em;
   padding: 0.25em;
 }
 
 .strong {
-  color: @verydarkblue;
+  color: var(--verydarkblue);
   font-weight: bold;
 }
 
@@ -542,8 +550,8 @@ This file contains DLx styles that need to be explicitly specified using classes
 
   &::after {
     .verydarkgreen-background;
-    border-radius: 5px;
-    box-shadow: 1px 1px 3px #ccc;
+    border-radius: var(--border-radius);
+    box-shadow: var(--shadow);
     content: attr(title);
     font-size: smaller;
     left: 0.5em;
@@ -552,7 +560,7 @@ This file contains DLx styles that need to be explicitly specified using classes
     position: absolute;
     top: 115%;
     transition: all 0.3s ease;
-    width: 300px;
+    width: 25em;
     z-index: -2;
   }
 
