no positioned elements
closes #30

--- a/less/patterns.less
+++ b/less/patterns.less
@@ -6,10 +6,10 @@ body {
   line-height: 1.5;
   padding: 2rem;
 
-  > label {
+  > label[for=nav] {
     align-items: flex-start;
     flex-direction: column;
-    margin: 1em;
+    padding: 1em;
     position: fixed;
     right: 0;
     top: 0;
